2005-09-06  Bruno coudoin  <bruno.coudoin@free.fr>

	Created new xml files for new wordlist format.
	The new file format includes all levels in a single file
	It will be easier to manage them at all level

	* boards/wordsgame/default-da.xml:
	* boards/wordsgame/default-el.xml:
	* boards/wordsgame/default-en.xml:
	* boards/wordsgame/default-es.xml:
	* boards/wordsgame/default-fi.xml:
	* boards/wordsgame/default-fr.xml:
	* boards/wordsgame/default-hu.xml:
	* boards/wordsgame/default-it.xml:
	* boards/wordsgame/default-lt.xml:
	* boards/wordsgame/default-nb.xml:
	* boards/wordsgame/default-nn.xml:
	* boards/wordsgame/default-pt.xml:
	* boards/wordsgame/default-pt_BR.xml:
	* boards/wordsgame/default-ro.xml:
	* boards/wordsgame/default-ru.xml:
	* boards/wordsgame/default-sk.xml:
	* boards/wordsgame/default-sl.xml:
	* boards/wordsgame/default-sv.xml:
	* docs/gcompris2spip.pl: added vietnamese

2005-09-04  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed bug #314680 
	http://bugzilla.gnome.org/show_bug.cgi?id=314680
	Thanks to Clytie Siddall

	* boards/administration.xml.in:
	* po/TRANSLATORS.README:
	* src/boards/python/admin/user_list.py:
	* src/gcompris/gcompris.c:

2005-09-04  Yves Combe  <yves@ycombe.net>

	add file for wordlists in xml format.
	add missing file from yesterday's commit.

	* boards/wordsgame/wordslevel_1_da.xml:
	* boards/wordsgame/wordslevel_1_de.xml:
	* boards/wordsgame/wordslevel_1_el.xml:
	* boards/wordsgame/wordslevel_1_en.xml:
	* boards/wordsgame/wordslevel_1_es.xml:
	* boards/wordsgame/wordslevel_1_fi.xml:
	* boards/wordsgame/wordslevel_1_fr.xml:
	* boards/wordsgame/wordslevel_1_hu.xml:
	* boards/wordsgame/wordslevel_1_it.xml:
	* boards/wordsgame/wordslevel_1_lt.xml:
	* boards/wordsgame/wordslevel_1_nb.xml:
	* boards/wordsgame/wordslevel_1_nn.xml:
	* boards/wordsgame/wordslevel_1_pt.xml:
	* boards/wordsgame/wordslevel_1_pt_BR.xml:
	* boards/wordsgame/wordslevel_1_ro.xml:
	* boards/wordsgame/wordslevel_1_ru.xml: